bugfix: several dark mode improvements feat: enabled dark mode and search on mobile

--- a/assets/scss/_boxes.scss
+++ b/assets/scss/_boxes.scss
@@ -133,5 +133,19 @@
         border-color: var(--bs-body-bg) transparent transparent transparent;
       }
     }
+    .td-box--light:not(.lead-block) {
+      color: var(--bs-body-color);
+      background-color: var(--bs-secondary-bg);
+      p > a, span > a {
+        color: var(--bs-link-color);
+        &:focus,
+        &:hover {
+          color: rgba(var(--bs-link-color-rgb), var(--bs-link-opacity, 1));
+        }
+      }
+      .td-arrow-down::before {
+        border-color: var(--bs-secondary-bg) transparent transparent transparent;
+      }
+    }
   }
   
