--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -37,43 +37,42 @@ $black: #000 !default;
 $code-color: darken($primary, 20%) !default;
 
 // Dark Mode
-
-$primary-dark:                      shade-color($primary, 80%) !default;
-$secondary-dark:                    shade-color($secondary, 80%) !default;
-$success-dark:                      shade-color($success, 80%) !default;
-$info-dark:                         shade-color($info, 80%) !default;
-$warning-dark:                      shade-color($warning, 80%) !default;
-$danger-dark:                       shade-color($danger, 80%) !default;
-$light-dark:                        $gray-800 !default;
-$dark-dark:                         mix($gray-800, $black) !default;
-
+    // Theme colours
+$primary-dark:                      #ff95b8;
+$secondary-dark:                    #ffcd90;
+$success-dark:                      #a4aeff;
+$info-dark:                         #dceeed;
+$warning-dark:                      #fcaea0;
+$danger-dark:                       #fcaea0;
+$light-dark:                        #e7f8f6;
+$dark-dark:                         #8f8f97;
+    // Text Emphasis
 $primary-text-emphasis-dark:        tint-color($primary-dark, 40%) !default;
 $secondary-text-emphasis-dark:      tint-color($secondary-dark, 40%) !default;
-$success-text-emphasis-dark:        tint-color($success, 40%) !default;
-$info-text-emphasis-dark:           tint-color($info, 40%) !default;
-$warning-text-emphasis-dark:        tint-color($warning, 40%) !default;
-$danger-text-emphasis-dark:         tint-color($danger, 40%) !default;
+$success-text-emphasis-dark:        tint-color($success-dark, 40%) !default;
+$info-text-emphasis-dark:           tint-color($info-dark, 40%) !default;
+$warning-text-emphasis-dark:        tint-color($warning-dark, 40%) !default;
+$danger-text-emphasis-dark:         tint-color($danger-dark, 40%) !default;
 $light-text-emphasis-dark:          $gray-100 !default;
 $dark-text-emphasis-dark:           $gray-300 !default;
 
-// scss-docs-start theme-bg-subtle-dark-variables
+    // Background subtle
 $primary-bg-subtle-dark:            shade-color($primary-dark, 80%) !default;
 $secondary-bg-subtle-dark:          shade-color($secondary-dark, 80%) !default;
-$success-bg-subtle-dark:            shade-color($success, 80%) !default;
-$info-bg-subtle-dark:               shade-color($info, 80%) !default;
-$warning-bg-subtle-dark:            shade-color($warning, 80%) !default;
-$danger-bg-subtle-dark:             shade-color($danger, 80%) !default;
+$success-bg-subtle-dark:            shade-color($success-dark, 80%) !default;
+$info-bg-subtle-dark:               shade-color($info-dark, 80%) !default;
+$warning-bg-subtle-dark:            shade-color($warning-dark, 80%) !default;
+$danger-bg-subtle-dark:             shade-color($danger-dark, 80%) !default;
 $light-bg-subtle-dark:              $gray-800 !default;
 $dark-bg-subtle-dark:               mix($gray-800, $black) !default;
-// scss-docs-end theme-bg-subtle-dark-variables
 
-// scss-docs-start theme-border-subtle-dark-variables
+    // Border subtle
 $primary-border-subtle-dark:        shade-color($primary-dark, 40%) !default;
 $secondary-border-subtle-dark:      shade-color($secondary-dark, 40%) !default;
-$success-border-subtle-dark:        shade-color($success, 40%) !default;
-$info-border-subtle-dark:           shade-color($info, 40%) !default;
-$warning-border-subtle-dark:        shade-color($warning, 40%) !default;
-$danger-border-subtle-dark:         shade-color($danger, 40%) !default;
+$success-border-subtle-dark:        shade-color($success-dark, 40%) !default;
+$info-border-subtle-dark:           shade-color($info-dark, 40%) !default;
+$warning-border-subtle-dark:        shade-color($warning-dark, 40%) !default;
+$danger-border-subtle-dark:         shade-color($danger-dark, 40%) !default;
 $light-border-subtle-dark:          $gray-700 !default;
 $dark-border-subtle-dark:           $gray-800 !default;
 
@@ -114,12 +113,17 @@ $body-emphasis-color-dark:          $white !default;
 $border-color-dark:                 $gray-700 !default;
 $border-color-translucent-dark:     rgba($white, .15) !default;
 $headings-color-dark:               inherit !default;
-$link-color-dark:                   tint-color($primary, 40%) !default;
+// $link-color-dark:                   tint-color($primary, 40%) !default;
+$link-color-dark:                   adjust-color($blue, $lightness: -5%) !default;
 $link-shade-percentage:             20% !default;
 $link-hover-color-dark:             shift-color($link-color-dark, -$link-shade-percentage) !default;
+$primary-highlight:                 #ff95b8;
+$secondary-highlight:               #ffcd90;
 // $code-color-dark:                   tint-color($code-color, 40%) !default;
 // $mark-color-dark:                   $body-color-dark !default;
 // $mark-bg-dark:                      $yellow-800 !default;
+
+    // End Dark Mode //
 
 // UI element colors
 
