--- a/assets/scss/_variables_project_after_bs.scss
+++ b/assets/scss/_variables_project_after_bs.scss
@@ -95,7 +95,8 @@
   // scss-docs-end root-body-variables
 
   --#{$prefix}heading-color: #{$headings-color};
-
+  --#{$prefix}primary-highlight: #{$primary-highlight};
+  --#{$prefix}secondary-highlight: #{$secondary-highlight};
   --#{$prefix}link-color: #{$link-color};
   --#{$prefix}link-color-rgb: #{to-rgb($link-color)};
   --#{$prefix}link-decoration: #{$link-decoration};
